[gd_scene load_steps=8 format=3 uid="uid://bamxffvl8qjh8"]

[ext_resource type="Script" path="res://menus/save_edit/ball_edit.gd" id="1_o1lrp"]
[ext_resource type="Texture2D" uid="uid://cs64xko6qb2ht" path="res://ball/ball.png" id="2_q7bxp"]
[ext_resource type="Shader" path="res://menus/save_edit/ball_edit.gdshader" id="3_s5s0b"]
[ext_resource type="Texture2D" uid="uid://b6hq1asafakhc" path="res://rectangle.png" id="4_vjuw0"]

[sub_resource type="Gradient" id="Gradient_crclh"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_e3sp8"]
gradient = SubResource("Gradient_crclh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f0w0y"]
shader = ExtResource("3_s5s0b")
shader_parameter/gradient_texture = SubResource("GradientTexture1D_e3sp8")

[node name="BallEdit" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
script = ExtResource("1_o1lrp")

[node name="NameLbl" type="Label" parent="."]
layout_mode = 2
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Ball Name"

[node name="ActiveLbl" type="Label" parent="."]
layout_mode = 2
text = "Active:"

[node name="ActiveBtn" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="Colors" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Main" type="HBoxContainer" parent="Colors"]
layout_mode = 2

[node name="ColorLbl" type="Label" parent="Colors/Main"]
layout_mode = 2
size_flags_horizontal = 3
text = "Main Color:"

[node name="ColorBtn" type="ColorPickerButton" parent="Colors/Main"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "     "
edit_alpha = false

[node name="Start" type="HBoxContainer" parent="Colors"]
layout_mode = 2

[node name="TrailStartLbl" type="Label" parent="Colors/Start"]
layout_mode = 2
size_flags_horizontal = 3
text = "Trail Start:"

[node name="StartBtn" type="ColorPickerButton" parent="Colors/Start"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "     "

[node name="End" type="HBoxContainer" parent="Colors"]
layout_mode = 2

[node name="TrailEndLbl" type="Label" parent="Colors/End"]
layout_mode = 2
size_flags_horizontal = 3
text = "Trail End:"

[node name="EndBtn" type="ColorPickerButton" parent="Colors/End"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "     "

[node name="Display" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Display"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -50

[node name="Trail" type="TextureRect" parent="Display/HBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_f0w0y")
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
texture = ExtResource("4_vjuw0")

[node name="Ball" type="TextureRect" parent="Display/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_q7bxp")
stretch_mode = 3

[node name="WinsLbl" type="Label" parent="Display"]
layout_mode = 2
text = "Wins: 0"
horizontal_alignment = 1

[node name="DeleteBtn" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Delete"

[connection signal="text_changed" from="NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="toggled" from="ActiveBtn" to="." method="_on_active_btn_toggled"]
[connection signal="color_changed" from="Colors/Main/ColorBtn" to="." method="_on_color_btn_color_changed"]
[connection signal="color_changed" from="Colors/Start/StartBtn" to="." method="_on_start_btn_color_changed"]
[connection signal="color_changed" from="Colors/End/EndBtn" to="." method="_on_end_btn_color_changed"]
[connection signal="pressed" from="DeleteBtn" to="." method="_on_delete_btn_pressed"]
